app/assets/stylesheets/content/_advanced_filters.sass
//-- copyright
// OpenProject is a project management system.
// Copyright (C) 2012-2018 the OpenProject Foundation (OPF)
//
// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU General Public License version 3.
//
// OpenProject is a fork of ChiliProject, which is a fork of Redmine. The copyright follows:
// Copyright (C) 2006-2017 Jean-Philippe Lang
// Copyright (C) 2010-2013 the ChiliProject Team
//
// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU General Public License
// as published by the Free Software Foundation; either version 2
// of the License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program; if not, write to the Free Software
// Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
//
// See docs/COPYRIGHT.rdoc for more details.
//++

.advanced-filters--container
  @extend %filters--container
  padding: rem-calc(10px)
  max-height: 50vh
  overflow-y: auto
  position: relative

  &.collapsed
    display: none

  .advanced-filters--close
    position: absolute
    top: 0.75rem
    right: 0.75rem
    width: 1rem
    z-index: 2

.advanced-filters--filters
  list-style-type:  none
  margin:           20px 0 0 0

  > li
    display: grid
    // Filters will not span the whole width,
    // but have an orientation to the left side
    grid-template-columns: 20% 20% 25%
    grid-gap: 10px
    align-items: center
    margin-bottom: 10px

  .advanced-filters--filter-name,
  .advanced-filters--add-filter-label
    @include text-shortener
    margin: auto 0

  .advanced-filters--filter-value,
  .advanced-filters--filter-operator
    .advanced-filters--select,
    .advanced-filters--number-field
      @include form--input-field-mixin--small
      @include form--input-field-mixin--narrow
      flex: 0 0 auto

// The type="text" is required to be more specific
.advanced-filters--text-field[type="text"],
.advanced-filters--date-field[type="text"]
  @extend .form--text-field

  &:required
    box-shadow: none

.advanced-filters--select
  @extend .form--select

.advanced-filters--affix
  @extend .form--field-affix
  @include form--field-affix-mixin--transparent
  font-size: 0.9rem

.advanced-filters--tooltip-trigger[data-tooltip]
  @extend .advanced-filters--affix, .tooltip--right

.advanced-filters--remove-filter
  grid-column: -1
  text-align: right

  a
    display: block
    &:hover
      text-decoration: none


.advanced-filters--remove-filter-icon
  @extend .icon-close, .icon4

.advanced-filters--add-filter-label-icon
  @extend .icon-add, .icon4

.advanced-filters--add-filter-info
  @include grid-content()
  @include grid-visible-overflow


.advanced-filters--spacer
  border-top:   1px solid $filters--border-color
  height: 1px
  margin:          0.75rem 1rem

.advanced-filters--spacer,
.advanced-filters--filter
  &.hidden
    display: none


fieldset#date-range p
  margin: 2px 0 2px 0

@include breakpoint(680px down)
  .advanced-filters--filters
    .advanced-filters--filter
      grid-gap: 0 10px

    .advanced-filters--filter-name,
    .advanced-filters--add-filter-label
      grid-column: 1 / -1

    .advanced-filters--filter-operator,
    .advanced-filters--filter-value
      grid-column: span 2
      order: 2

      .advanced-filters--text-field,
      .advanced-filters--select,
      .advanced-filters--number-field
        width: 100%

